--- a/index.html
+++ b/index.html
@@ -8,37 +8,57 @@
   
   <title>Frontend Mentor | Four card feature section</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
+  <main>
+    <section class="header">
+      <h1 class="header-title">Reliable, efficient delivery <br> <span class="bolder">Powered by Technology</span></h1>
+      <p class="header-desc">Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+    </section>
+    <section class="content">
+      <div class="card-column">
+        <section class="card card-one">
+          <h3 class="card-title">Supervisor</h3>
+          <p class="card-content">Monitors activity to identify project roadblocks</p>
+          <figure class="img-container">
+            <img src="./images/icon-supervisor.svg" alt="supervisor">
+          </figure>
+        </section>
+      </div>
+      <div class="card-column">
+        <section class="card card-two">
+          <h3 class="card-title">Team Builder</h3>
+          <p class="card-content">Scans our talent network to create the optimal team for your project</p>
+          <figure class="img-container">
+            <img src="./images/icon-team-builder.svg" alt="team builder">
+          </figure>
+        </section>
+        <section class="card card-three">
+          <h3 class="card-title">Karma</h3>
+          <p class="card-content">Regularly evaluates our talent to ensure quality</p>
+          <figure class="img-container">
+            <img src="./images/icon-karma.svg" alt="karma">
+          </figure>
+        </section>
+      </div>
+      <div class="card-column">
+        <section class="card card-four">
+          <h3 class="card-title">Calculator</h3>
+          <p class="card-content">Uses data from past projects to provide better delivery estimates</p>
+          <figure class="img-container">
+            <img src="./images/icon-calculator.svg" alt="calculator">
+          </figure>
+        </section>
+      </div>
+    </section>
+  </main>
+  <hr>
   <footer>
     <p class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Coded by <a href="#">Mahesh</a>.
     </p>
   </footer>
 </body>
