add changes to responsive design

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           </figure>
         </section>
       </div>
-      <div class="card-column">
+      <div class="card-column col-middle">
         <section class="card card-two">
           <h3 class="card-title">Team Builder</h3>
           <p class="card-content">Scans our talent network to create the optimal team for your project</p>
